--- a/localisation/britain_focus_l_english.yml
+++ b/localisation/britain_focus_l_english.yml
@@ -70,19 +70,19 @@
   UK_war_BAV:0 "바이에른과의 전쟁"
   UK_war_BAV_desc:0 "바이에른은 서부 연합에 협조할 의사가 없다는 뜻을 여러 차례 표명했습니다. 불가피하게 우리를 공격하기 전에 그들을 공격해야 합니다."
   UK_against_RUS:0 "러시아의 확장에 맞서기"
-  UK_against_RUS_desc:0 "Russia is the greatest threat to the current European order we have established during the Great War. With their recent declaration of war against Afghanistan, it is clear that they will not stop at their current borders."
+  UK_against_RUS_desc:0 "러시아는 우리가 대전 중에 세운 현재의 유럽 질서에 가장 큰 위협입니다. 그들의 최근 아프가니스탄과의 전쟁 선언으로, 그들은 현재의 국경에서 멈추지 않을 것이 분명합니다."
   UK_embargo_RUS:0 "차르정에 대한 금수 조치"
-  UK_embargo_RUS_desc:0 "Russia doesn't heavily rely on our resources as much as it does on the Dutch East Indies or America, but it does rely on some of our resources. We need to cut their supply to try and make a point to them."
+  UK_embargo_RUS_desc:0 "러시아는 네덜란드령 동인도나 미국처럼 우리의 자원에 크게 의존하지 않지만, 우리의 자원에 의존하고 있습니다. 우리는 그들의 공급량을 줄여야만 그들을 설득할 수 있습니다."
   UK_war_RUS:0 "러시아와의 전쟁"
-  UK_war_RUS_desc:0 "Russia has expressed on numerous occasions that they are not willing to cooperate with us or any other major power. We need to put down this threat of national security."
+  UK_war_RUS_desc:0 "러시아는 우리나 다른 주요 강대국들과 협력할 의사가 없음을 여러 차례 표명해 왔습니다. 우리는 국가 안보에 대한 이러한 위협을 억제해야 합니다."
   UK_plan_asia:0 "아시아 계획"
-  UK_plan_asia_desc:0 "Plan Europe is a plan to both prevent instability and secure our dominance over said region."
+  UK_plan_asia_desc:0 "유럽 계획은 불안정성을 방지하고 해당 지역에 대한 우리의 우위를 확보하기 위한 계획입니다."
   UK_intervine_CN:0 "중일전쟁 개입"
-  UK_intervine_CN_desc:0 "Japan is an ever expanding nation. They annexed Korea in the turn of the century, followed by Taiwan, German Oceania, and most recently, Manchuria. It is extremely clear that they will not stop until they dominate over Asia, and sooner or later they will come after our colonies in the region. We must help China defeat these agressors, before they gain too much power."
+  UK_intervine_CN_desc:0 "일본은 계속 팽창하는 나라입니다. 그들은 세기의 전환기에 한국을 합병했고, 그 뒤를 대만, 독일령 오세아니아, 그리고 가장 최근에 만주를 합병했습니다. 그들이 아시아를 지배할 때까지 멈추지 않을 것이 분명하고, 머지않아 그들은 이 지역에 있는 우리의 식민지를 쫓아올 것입니다. 우리는 중국이 너무 많은 권력을 획득하기 전에 그들을 물리칠 수 있도록 도와야 합니다."
   UK_army_expansion:0 "군대 확장"
-  UK_army_expansion_desc:0 "We must expand our army to fight any future threats of the British Empire."
+  UK_army_expansion_desc:0 "앞으로 대영제국의 어떤 위협에도 맞서 싸우기 위해 우리의 군대를 확대해야 합니다."
   UK_power_KING:0 "국왕을 따라"
-  UK_power_KING_desc:0 "The political system of the United Kingdom has proven to be inefficient and has failed the people of Britain. With rampant striking and a failure for the House of Commons to get things done, the King has had enough. When we give him the all-clear, the King will deliver a sentence that will forever change Britain; 'I hereby utilise my royal decree to dissolve this House at once.'"
+  UK_power_KING_desc:0 "영국의 정치 체제는 비효율적인 것으로 판명되어 영국 국민들을 실망시켰습니다. 파업이 만연하고 하원이 일을 처리하지 못함에 따라, 왕은 더이상 참을 수 없었습니다. When we give him the all-clear, the King will deliver a sentence that will forever change Britain; 'I hereby utilise my royal decree to dissolve this House at once.'"
   UK_power_PM:0 "인민을 따라"
   UK_power_PM_desc:0 "The Magna Carta was developed in order to restrict the monarch's power and authority. If we were to abandon this centuries old document, the British people would be outraged. We must reinforce the Prime Minister and Parliament's authority, for the good of our country."
   UK_league:0 "Reinforce the Alliance with the French"
@@ -172,41 +172,41 @@
   UK_european_politics:0 "유럽 개입"
   UK_european_politics_desc:0 "Europe currently has countless people advocating for war on socialist countries such as ourselves. These people must not be allowed to exist in the coming years. Intervention within Europe is a must."
   UK_former_colonies:0 "식민지 개입"
-  UK_former_colonies_desc:0 "Our former colonies did not take to the idea of a non-monarchist British regime too lightly. All of them have since cut ties and declared independence, however almost all of them declared independence under a capitalist system. This system is inferior and the people of these regions need this proven to them. Intervention in these regions is a must."
+  UK_former_colonies_desc:0 "우리의 이전 식민지들은 군주가 없는 영국 정권에 대한 생각을 너무 가볍게 받아들이지 않았습니다. 그들 모두는 그 이후 관계를 끊고 독립을 선언했지만, 거의 모든 이들이 자본주의 체제하에서 독립을 선언했어요. 이 시스템은 열악하고 이 지역 사람들은 이것을 증명해야 합니다. 이들 지역에 대한 개입은 필수이다."
   UK_war_IRE:0 "아일랜드와의 전쟁"
-  UK_war_IRE_desc:0 "Ireland slipped away from our grasp in 1922. This is all fine and good, however, they are under a capitalist system. This must be rectified. The Irish must see the wonders of socialism, and the only reasonable way to do that is by force."
+  UK_war_IRE_desc:0 "아일랜드는 1922년에 우리의 손아귀에서 빠져나갔습니다. 이것은 모두 괜찮고 좋은 것이지만, 그들은 자본주의 체제하에서 살고 있습니다. 이 문제는 고쳐야 합니다. 아일랜드 사람들은 사회주의에 대한 경이로움을 보아야 하며, 그것을 할 수 있는 유일한 합리적인 방법은 무력에 의한 것입니다."
   UK_scandinavian:0 "스칸디나비아에 사회주의 전파"
-  UK_scandinavian_desc:0 "The Scandinavians are some of the most free-thinking people on Earth, and all have capitalist systems. It would take about about a half-century for them to even consider socialism. Due to their close proximity, they are easy targets for an invasion."
+  UK_scandinavian_desc:0 "스칸디나비아인들은 지구상에서 가장 자유로운 사고를 하는 사람들 중 일부이며, 모두 자본주의 체제를 가지고 있습니다. 그들이 사회주의까지 고려하는 데는 약 반세기 정도 걸릴 것입니다. 그들의 근접성 때문에, 그들은 쉽게 침략의 대상이 됩니다."
   UK_war_NOR:0 "노르웨이와의 전쟁"
-  UK_war_NOR_desc:0 "The Norwegians need to see the benefits of socialism. We need to invade them."
+  UK_war_NOR_desc:0 "노르웨이 사람들은 사회주의의 이점을 볼 필요가 있습니다. 우리는 그들을 침공해야 합니다."
   UK_war_DEN:0 "덴마크와의 전쟁"
-  UK_war_DEN_desc:0 "The Danes need to see the benefits of socialism. We need to invade them."
+  UK_war_DEN_desc:0 "덴마크인들은 사회주의의 이점을 볼 필요가 있습니다. 우리는 그들을 침공해야 합니다."
   UK_influence_FRA:0 "프랑스에 영향 주기"
-  UK_influence_FRA_desc:0 "France is on the edge of a worker's revolution. With the French Communist Party gaining massive support, all France needs is a push. It's a good thing we can push them."
+  UK_influence_FRA_desc:0 "프랑스는 노동자 혁명의 가장자리에 있습니다. 프랑스 공산당이 막대한 지지를 얻고 있는 상황에서 프랑스가 필요한 것은 밀고 당기기만 하면 됩니다. 우리가 그들을 밀어낼 수 있어서 다행입니다."
   UK_war_FRA:0 "프랑스와의 전쟁"
-  UK_war_FRA_desc:0 "France obviously doesn't want anything to do with socialism. The only way to show the French workers its benefits is an invasion. Which is exactly what we have planned."
+  UK_war_FRA_desc:0 "프랑스는 분명히 사회주의와는 어떤 관계도 원하지 않습니다. 프랑스 노동자들에게 그것의 혜택을 보여주는 유일한 방법은 침략입니다. 그게 바로 우리가 계획한 것입니다."
   UK_fourth_internationale:0 "제4인터내셔널" 
   UK_fourth_internationale_desc:0 ""
   UK_mission_to_SAF:0 "남아프리카로의 외교 사절"
-  UK_mission_to_SAF_desc:0 "The South Africans may have broken away from us, but we aren't savages. After all, honey attracts more flies than vinegar."
+  UK_mission_to_SAF_desc:0 "남아공 사람들은 우리에게서 도망쳤을지 모르지만, 우리는 야만인이 아닙니다. 결국, 꿀은 식초보다 더 많은 파리를 끌어들입니다."
   UK_war_RAJ:0 "인도에 혁명 전파"
-  UK_war_RAJ_desc:0 "India broke free from our grasp, but its government is on the verge of collapse. We need to intervene and show the Indian people why we abandoned the monarchy."
+  UK_war_RAJ_desc:0 "인도는 우리의 손아귀에서 벗어났지만, 인도는 정부가 붕괴될 위기에 처해 있습니다. 우리는 우리가 왜 군주제를 포기했는지를 인도 국민들에게 보여줘야 합니다."
   UK_mission_to_RAJ:0 "인도와의 관계 재수립"
-  UK_mission_to_RAJ_desc:0 "The Indians may have broken away from us, but we aren't savages. After all, honey attracts more flies than vinegar."
+  UK_mission_to_RAJ_desc:0 "인디언들이 우리로부터 도망쳤을지 모르지만, 우리는 야만인이 아닙니다. 결국, 꿀은 식초보다 더 많은 파리를 끌어들입니다."
   UK_war_SAF:0 "케이프 코뮌 수립"
-  UK_war_SAF_desc:0 "The South Africans are a fiercely divided people. The Boers, the Namibian-Germans, the Zulu, and the English all clash violently down there. They need to be shown that all people are equal. The Cape Commune must be established."
+  UK_war_SAF_desc:0 "남아프리카 공화국은 격렬하게 분열된 민족입니다. 보어족, 나미비아-게르만족, 줄루족, 그리고 영국인들은 모두 그곳에서 격렬하게 충돌합니다. 그들은 모든 사람들이 평등하다는 것을 보여줄 필요가 있습니다. 케이프 코뮌을 설립해야 합니다."
   UK_external_policies:0 "대외 정책"
-  UK_external_policies_desc:0 "With our colonies abandoning us, and the people of Europe being violently opposed to our new government, there are many external affairs we need to tend to."
+  UK_external_policies_desc:0 "우리의 식민지가 우리를 버리고, 유럽인들이 우리의 새 정부에 대해 격렬하게 반대하고 있는 상황에서, 우리가 해야 할 많은 외부 문제들이 있습니다."
   UK_leave_eastern_coalition:0 "프랑스 버리기"
-  UK_leave_eastern_coalition_desc:0 "The Eastern Coalition was a wonderful concept, but its purpose have never been quite clear. Why are we aligning ourselves with our former bitter rival? After all, two centuries ago, we were at each other's throats. It's time to leave the Eastern Coalition"
+  UK_leave_eastern_coalition_desc:0 "동부 연합은 훌륭한 개념이었지만 그 목적이 뚜렷했던 적은 없었습니다. 왜 우리는 이전의 쓰라린 적수와 제휴하고 있습니까? 어쨌든, 2세기 전에, 우리는 서로 앙숙이었습니다. 동부 연합을 떠날 때입니다."
   UK_firm_hand_on_colonies:0 "지배권을 쥐기"
-  UK_firm_hand_on_colonies_desc:0 "The colonies of Britain are the lifeblood of it. Without them, international trade would collapse, and the new post-colonial governments of the world would barely function. Our job is to tame the savages of the world, not breed new ones."
+  UK_firm_hand_on_colonies_desc:0 "영국의 식민지는 그것의 생명선입니다. 그들이 없다면, 국제 무역은 붕괴될 것이고, 세계의 새로운 식민지 이후 정부들은 거의 제 기능을 하지 못할 것입니다. 우리의 일은 세상의 야만인들을 길들이는 것이지 새로운 야만인들을 길들이는 것이 아닙니다."
   UK_towards_decolonization:0 "풀어 놓기"
-  UK_towards_decolonization_desc:0 "Colonisation and decolonisation are fiercely debated topics. However, it may be in our best interest to begin the process of decolonisation. The practice has largely gone out of favour, and it may be seen better diplomatically to begin releasing our occupied territories."
+  UK_towards_decolonization_desc:0 "식민지화와 탈식민지화는 치열하게 논의되는 주제이다. 하지만, 탈식민지화 과정을 시작하는 것이 우리에게 가장 이익이 될 수 있습니다. 이 관습은 대체로 환영받지 못하고 있으며, 우리의 점령지를 풀어주는 것이 외교적으로 더 잘 보일 수도 있습니다."
   UK_equipment_modern:0 "BSA 부활"
   UK_equipment_modern_desc:0 "The Birmingham Small Arms Company Limited (BSA) was a major British industrial combine, a group of businesses manufacturing military and sporting firearms; bicycles; motorcycles; cars; buses and bodies; steel; iron castings; hand, power, and machine tools; coal cleaning and handling plants; sintered metals; and hard chrome process."
   UK_oil_developments:0 "석유 산업"
-  UK_oil_developments_desc:0 "The oil reserves within Britain are... lackluster, to say the least. The only way for us to expand military development and production is to establish oil industries, which require a small amount of government effort to establish. It is possible, however."
+  UK_oil_developments_desc:0 "영국 내의 석유 매장량은 ...허탈하게도 형편 없습니다. 군사 개발과 생산을 확대할 수 있는 유일한 방법은 석유 산업을 설립하는 것인데, 석유 산업은 정부의 적은 노력이 필요합니다. 하지만 가능합니다."
 
 
 
