--- a/localisation/replace/INOT_replace_l_english.yml
+++ b/localisation/replace/INOT_replace_l_english.yml
@@ -16,7 +16,7 @@
  STATE_809:0 "니스"
  STATE_810:0 "사부아"
  STATE_811:0 "낭시"
- STATE_812:0 "콘스탄차"
+ STATE_812:0 "북도브루자"
  STATE_813:0 "하사카"
  STATE_814:0 "자를란트"
  STATE_815:0 "아르덴"
