--- a/localisation/spr_focus_l_english.yml
+++ b/localisation/spr_focus_l_english.yml
@@ -34,11 +34,11 @@
  SPR_new_warfare:0 "육군 교리 주력"
  SPR_new_warfare_desc:0 "The military doctrines that defined ground combat in the Great War are outdated. We must put our greatest minds to the task of shaping the military thought of tomorrow."
  SPR_motorization:0 "기계화 주력"
- SPR_motorization:0 "Rethinking the possibilities of motorised infantry, we can push the limits of what vehicles can be constructed today."
+ SPR_motorization_desc:0 "Rethinking the possibilities of motorised infantry, we can push the limits of what vehicles can be constructed today."
  SPR_armour_effort:0 "기갑 주력"
  SPR_armour_effort_desc:0 "Applying what we have learned from mechanising our infantry, we can improve our armoured vehicles as well."
  SPR_officers:0 "새로운 최전방 장교 임명"
- SPR_officers:0 "To ensure that our policies are followed in military practice, we will introduce politically appointed officials into military ranks."
+ SPR_officers_desc:0 "To ensure that our policies are followed in military practice, we will introduce politically appointed officials into military ranks."
  SPR_centralized_command:0 "중앙 집중 사령부"
  SPR_centralized_command_desc:0 "The command of our troops are hardly organised. Our army has no precision, nor does it have any cooperation or proper timing. By establishing a central command of our armies, we can change that."
  SPR_slot_1:0 "추가 연구 슬롯"
