--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -38,13 +38,12 @@
  STRATEGICREGION_38:0 "폴란드"
  STRATEGICREGION_39:0 "서부 러시아"
  STRATEGICREGION_40:1 "트란스볼가"
- STRATEGICREGION_41:1 "이베리아"
+ STRATEGICREGION_41:1 "북동 이베리아"
  STRATEGICREGION_42:0 "비스케이 만"
  STRATEGICREGION_43:0 "잉글랜드 서안 부근"
  STRATEGICREGION_44:0 "덴마크 해협"
  STRATEGICREGION_45:0 "노르웨이 해"
  STRATEGICREGION_46:0 "바렌츠 해"
- STRATEGICREGION_47:1 "이베리아 연안"
  STRATEGICREGION_47:1 "이베리아 연안"
  STRATEGICREGION_48:0 "아프리카 연안"
  STRATEGICREGION_49:0 "북대서양 해령"
