--- a/localisation/wtt_decisions_l_english.yml
+++ b/localisation/wtt_decisions_l_english.yml
@@ -103,11 +103,11 @@
  form_persian_empire:0 "페르시아 제국 재건"
  form_byzantine_empire:0 "비잔티움 재건"
  byz_triumph_for_italy:0 "이탈리아에서의 승리"
- byz_triumph_for_italy_desc:0 "이탈리아는 우리의 통제 아래에 있고, 제국으로의 편입을 위한 영광스러운 개선식을 열 것입니다\!"
+ byz_triumph_for_italy_desc:0 "이탈리아는 우리의 통제 아래에 있고, 제국으로의 편입을 위한 영광스러운 개선식을 열 것입니다!"
  byz_triumph_for_middle_east:0 "레반트에서의 승리"
- byz_triumph_for_middle_east_desc:0 "레반트는 우리의 통제 아래에 있고, 제국으로의 편입을 위한 영광스러운 개선식을 열 것입니다\!"
+ byz_triumph_for_middle_east_desc:0 "레반트는 우리의 통제 아래에 있고, 제국으로의 편입을 위한 영광스러운 개선식을 열 것입니다!"
  byz_triumph_for_egypt_and_tunis:0 "이집트와 튀니스에서의 승리"
- byz_triumph_for_egypt_and_tunis_desc:0 "이집트와 튀니스는 우리의 통제 아래에 있고, 제국으로의 편입을 위한 영광스러운 개선식을 열 것입니다\!"
+ byz_triumph_for_egypt_and_tunis_desc:0 "이집트와 튀니스는 우리의 통제 아래에 있고, 제국으로의 편입을 위한 영광스러운 개선식을 열 것입니다!"
  form_arabia:0 "아라비아 통일"
  form_majapahit_empire:0 "제해국의 재결성"
  form_rattanakosin_kingdom:0 "라따나꼬신의 유산 강화"
@@ -135,19 +135,19 @@
  form_mutapa_category:0 "짐바브웨 제국 재건"
  form_mutapa_category_desc:0 "대륙 남쪽에 퍼진 식민 지배의 영향을 지우기 위해, 우리가 과거에 이룩했던 강력한 제국의 모습 뒤에 사람들을 모이게 할 때인 것 같습니다. 이 지역에는 여러 것들이 존재했었지만, 우리에게 필요한 것은 상징이 될 이름 단 하나입니다."
  form_roman_empire_category:0 "로마의 야망 실현"
- form_roman_empire_category_desc:0 "지중해를 둘러싼 제국에 대한 개념이 최근 몇 년간 대중들의 마음 속에 자리잡았습니다. 이제, 우리의 군사 작전은 가장 열렬한 추종자들의 꿈도 뛰어넘었고, 우리 자신이 이러한 야망을 현실화할 수 있는 위치에 있음을 보았습니다. 로마는 무적이리라(Roma invicta)\!"
+ form_roman_empire_category_desc:0 "지중해를 둘러싼 제국에 대한 개념이 최근 몇 년간 대중들의 마음 속에 자리잡았습니다. 이제, 우리의 군사 작전은 가장 열렬한 추종자들의 꿈도 뛰어넘었고, 우리 자신이 이러한 야망을 현실화할 수 있는 위치에 있음을 보았습니다. 로마는 무적이리라(Roma invicta)!"
  form_persian_empire_category:0 "페르시아 제국 재건"
  form_persian_empire_category_desc:0 "우리가 행한 최근의 정복은 옛 페르시아 제국의 강역에 이르렀습니다. 지역들의 풍부한 역사를 대입할 때, 우리의 영역을 인식하는 것은 옛적의 제국을 다시금 되살릴 기회가 될 수 있지 않을까요?"
  form_byzantine_empire_category:0 "비잔티움 재건"
- form_byzantine_empire_category_desc:0 "터키의 지배를 받던 우리의 고토를 수복함으로써, 우리는 지금 다소의 선전과 함께 우리가 바로 5세기 전 멸망한 그 제국의 후계자라고 주장할 수 있습니다. 이 계승은 틀림없이 우리의 국제적 위신을 높여줄 것입니다\!"
+ form_byzantine_empire_category_desc:0 "터키의 지배를 받던 우리의 고토를 수복함으로써, 우리는 지금 다소의 선전과 함께 우리가 바로 5세기 전 멸망한 그 제국의 후계자라고 주장할 수 있습니다. 이 계승은 틀림없이 우리의 국제적 위신을 높여줄 것입니다!"
  form_arabia_category:0 "아라비아 통일"
- form_arabia_category_desc:0 "아라비아의 국가들은 오랜 세월 대립하며 나뉘어 있었습니다. 우리의 통치 아래에 반도가 통일된 지금, 통일 아라비아의 결성을 마침내 발표할 수 있을 것입니다\!"
+ form_arabia_category_desc:0 "아라비아의 국가들은 오랜 세월 대립하며 나뉘어 있었습니다. 우리의 통치 아래에 반도가 통일된 지금, 통일 아라비아의 결성을 마침내 발표할 수 있을 것입니다!"
  form_majapahit_empire_category:0 "해상패권정의 재결성"
  form_majapahit_empire_category_desc:0 "수 세기 전, 대제국이 인도네시아 제도를 호령하며 무역을 지배해왔습니다. 우리의 국경 확장이 이 제국의 강역을 망라하는데 성공했으니, 이 재결성은 지역 단결의 상징이 될 것입니다."
  form_rattanakosin_kingdom_category:0 "라따나꼬신 유산의 강화"
  form_rattanakosin_kingdom_category_desc:0 "최근 몇 년 간, 우리는 국가의 건국 이념이 다져둔 전통적 가치관과 멀어져 있었습니다. 우리가 누렸던 영광스러운 시절의 영토를 이루게 된 지금, 역사를 더 가깝게 받아들일 수 있을 때인지도 모릅니다."
  form_hre_category:0 "신성 로마 제국의 부활"
- form_hre_category_desc:0 "우리 여제 폐하의 명성은 끝이 없고, 우리 나라의 국경도 마찬가지입니다. 우리 조국은 옛 신성 로마 제국의 고토를 능가할 만큼 커졌고, 우리 앞길을 방해하려는 국가들은 더 이상 그럴 입장이 아닙니다. 여제 폐하께서는 현재의 기회를 그냥 두지 않을 것이며, 우리는 신성 로마 제국의 정신적 후계자로서의 역할을 받아들일 것을 선언하셨습니다. 독수리는 모든 것을 지배하리라(Aquila Elegit Iovis Omnia Vincit)\!"
+ form_hre_category_desc:0 "우리 여제 폐하의 명성은 끝이 없고, 우리 나라의 국경도 마찬가지입니다. 우리 조국은 옛 신성 로마 제국의 고토를 능가할 만큼 커졌고, 우리 앞길을 방해하려는 국가들은 더 이상 그럴 입장이 아닙니다. 여제 폐하께서는 현재의 기회를 그냥 두지 않을 것이며, 우리는 신성 로마 제국의 정신적 후계자로서의 역할을 받아들일 것을 선언하셨습니다. 독수리는 모든 것을 지배하리라(Aquila Elegit Iovis Omnia Vincit)!"
  form_greater_german_reich_category:0 "대독일국 선포"
  form_greater_german_reich_category_desc:0 "우리의 적들은 발 아래에 쓰러져 몰락했고, 동방을 향한 팽창이라는 목표는 성공했습니다. 이제 세계가 우리 국가의 위대함을 알고, 우리 수도를 모두가 긍지를 안고 우러를 수 있는 곳으로 변모시키도록 착수해야 할 시간입니다."
  form_greater_german_reich:0 "대독일국 선포"
@@ -262,7 +262,7 @@
  mers_el_kebir_raid_desc:0 "비시 프랑스의 손아귀에 떨어진 프랑스 함대가, 다시 독일의 손에 넘어가는 것을 용납할 수 없습니다. 가장 경멸스러운 수단을 써서라도, 공습의 위협에 처한 우리네 옛 동맹국의 해군에게 즉각적인 항복을 요구해야만 합니다."
  FRA_vichy_france:0 "비시 프랑스"
  FRA_scuttle_the_fleet:0 "함대의 도주"
- FRA_scuttle_the_fleet_desc:0 "외세의 군대가 우리 해군을 통제하기 위해 강압을 가했습니다. 우리는 이 상황을 용납할 수 없으며, 우리의 함선들을 달아나게 해야 합니다\!"
+ FRA_scuttle_the_fleet_desc:0 "외세의 군대가 우리 해군을 통제하기 위해 강압을 가했습니다. 우리는 이 상황을 용납할 수 없으며, 우리의 함선들을 달아나게 해야 합니다!"
  FRA_case_anton_mission:0 "안톤 작전 진행 중"
  case_anton:0 "안톤 작전"
  FRA_case_anton_mission_tt:0 "합병을 모면했습니다."
@@ -294,9 +294,9 @@
  SOV_relocate_industry_from_smolensk:0 "스몰렌스크의 산업 재배치"
  SOV_relocate_industry_from_smolensk_desc:0 "스몰렌스크 공장에 설치된 중장비들을 우랄 너머로 대피시키는 것은 고된 일입니다만, 우리의 전시 생산력을 확보하려면 불가피한 일입니다."
  SOV_relocate_industry_from_smolensk_tt:0 "§R결정의 시간이 지날 때까지 스몰렌스크를 통제하고 있어야 합니다.§!"
- relocate_industry_repair:1 "어떤 공장들은 재건축해야 할 것입니다\!"
+ relocate_industry_repair:1 "어떤 공장들은 재건축해야 할 것입니다!"
  SOV_order_227:0 "명령 227호"
- SOV_order_227_desc:0 "최후의 후퇴를 할 때다. 단 한 발자국도 물러서지 마라\!"
+ SOV_order_227_desc:0 "최후의 후퇴를 할 때다. 단 한 발자국도 물러서지 마라!"
  SOV_scorched_earth:0 "청야 전술 실시"
  SOV_scorched_earth_baltics:0 "발트 지역에서의 청야 전술 실행"
  SOV_scorched_earth_moscow:0 "모스크바 인접지역에서의 청야 전술 실행"
@@ -324,7 +324,7 @@
  GER_request_polish_war_participation:0 "폴란드에게 참전을 요구"
  GER_request_polish_war_participation_desc:0 "우리가 [SOV.GetName](와)과 전쟁 중인 현재, 우리는 우리 군대가 [POL.GetAdjective] 영토를 통과할 수 있는 권한이 필요합니다. 우리가 그들을 보호하겠다고 맹세했으니, 그들 역시 우리의 전쟁에 참여하는 것이 지극히 당연한 일입니다."
  GER_reform_austro_hungarian_empire:1 "오스트리아-헝가리 제국의 개혁"
- GER_reform_austro_hungarian_empire_tt:0 "다른 오스트리아-헝가리 계승국들에게 제국의 개혁을 요청합니다.\n§R그들이 수락하면, 계승국들이 일으킨 모든 전쟁을 책임져야 할 것입니다\!§!\n"
+ GER_reform_austro_hungarian_empire_tt:0 "다른 오스트리아-헝가리 계승국들에게 제국의 개혁을 요청합니다.\n§R그들이 수락하면, 계승국들이 일으킨 모든 전쟁을 책임져야 할 것입니다!§!\n"
  GER_reformed_austro_hungarian_empire:0 "오스트리아-헝가리 제국의 개혁"
  GER_barbarossa_mission:0 "총통 훈령 21조"
  emergency_factory_conversion_defensive:0 "긴급 공장 전환"
@@ -346,7 +346,7 @@
  GER_barbarossa_mission_desc:0 "독일 국방군은 소비에트 러시아를 무찌르기 위해 신속한 군사 작전을 준비해야만 합니다. 러시아군의 몸체는 기갑 선봉대가 주도하는 대담한 작전 앞에 파괴되고 말 것입니다."
  USA_war_measures:0 "전쟁 대책"
  USA_homeland_defense:0 "국토 방위 긴급대책법"
- USA_homeland_defense_desc:1 "우리의 자랑스러운 국가에 적들이 발을 디뎠습니다. 미국인들은 떨치고 일어나 침략자들을 바다로 몰아낼 것입니다\!"
+ USA_homeland_defense_desc:1 "우리의 자랑스러운 국가에 적들이 발을 디뎠습니다. 미국인들은 떨치고 일어나 침략자들을 바다로 몰아낼 것입니다!"
  USA_aid_britain:0 "영국 원조"
  USA_establish_personal_communication_with_former_naval_person:0 "전직 해군 인사의 서신"
  USA_establish_personal_communication_with_former_naval_person_desc:0 "새로운 지도자가 [ENG.GetName]의 총리직을 수행하려 합니다. 그와의 개인적인 면담을 통해, 불가피한 전쟁에 관한 대비와 협조를 이루어야만 합니다."
@@ -359,7 +359,7 @@
  USA_women_in_the_workforce:1 "리벳공 로지"
  USA_women_in_the_workforce_desc:0 "전기 믹서기 쓸 줄 아세요? 그럼 드릴 켜는 법도 배울 수 있습니다. 전쟁이 벌어지는 동안, 600만 명이 넘는 미국인 여성들은 공장에서 건설과 여러 육체 노동에 종사하며, 여성도 남성 못지 않게 해낼 수 있다는 것을 여실히 증명하고 있습니다."
  CAN_women_in_the_workforce:0 "브렌소녀 로니"
- CAN_women_in_the_workforce_desc:0 "로니가 말합니다. "와보라죠\!" 남성들이 군에서 복무하는 동안, 우리 국가의 여성들의 어깨에 군수 생산의 책임이 달려있습니다. 전쟁이 지속되는 동안, 80만 명이 넘는 캐나다 여성들은 후방에서 모집된 뒤 업무에 종사하며, 여성도 남성 못지 않게 해낼 수 있다는 것을 여실히 증명하고 있습니다."
+ CAN_women_in_the_workforce_desc:0 "로니가 말합니다. "와보라죠!" 남성들이 군에서 복무하는 동안, 우리 국가의 여성들의 어깨에 군수 생산의 책임이 달려있습니다. 전쟁이 지속되는 동안, 80만 명이 넘는 캐나다 여성들은 후방에서 모집된 뒤 업무에 종사하며, 여성도 남성 못지 않게 해낼 수 있다는 것을 여실히 증명하고 있습니다."
  CHI_integrate_the_warlords:0 "군벌 통합"
  CHI_integrate_the_army:1 "[From.GetAdjective]군 통합"
  CHI_integrate_the_administration:1 "[From.GetAdjective] 행정 통합"
@@ -475,7 +475,7 @@
  GER_case_anton:1 "안톤 작전의 실행"
  GER_case_anton_tt2:1 "북아프리카의 모든 프랑스 주를 지배하지 않습니다."
  GER_case_anton_desc:0 "프랑스에 있는 우리의 괴뢰 정권은 이제 유용성이 다 되었습니다. 즉시 [Root.GetName]에 통합하고, 신속하게 대처한다면 프랑스 함대에 잔존한 사령관을 회유시킬 수도 있을 것입니다."
- GER_case_anton_tt:0 "비시 프랑스가 7일간 프랑스 함대를 장악합니다.\n\n§R독일군이 툴롱에 이틀 안에 도착하지 않으면 프랑스가 함대를 침몰시켜 버릴 수도 있습니다\!§!\n"
+ GER_case_anton_tt:0 "비시 프랑스가 7일간 프랑스 함대를 장악합니다.\n\n§R독일군이 툴롱에 이틀 안에 도착하지 않으면 프랑스가 함대를 침몰시켜 버릴 수도 있습니다!§!\n"
  GER_case_red:0 "적색 상황"
  GER_operation_marita:0 "마리타 작전"
  political_actions:0 "정치적 행동"
@@ -495,7 +495,7 @@
  anti_communist_raids:0 "공산주의자 타도"
  anti_communist_raids_desc:0 "우리 국가의 장기적인 안정을 위해 공산주의 분자들을 엄중히 단속해야만 합니다. 그들의 영향력은 너무 강하고, 잠재적으로 정부에게 문제를 끼칠 수 있습니다."
  object_to_attaches:0 "주재무관에 항의"
- object_to_attaches_desc:0 "우리의 적들이 외국의 원조를 받았습니다\! 이 사안에 강하게 반대하고 모든 주재무관의 귀국을 요구해야만 합니다."
+ object_to_attaches_desc:0 "우리의 적들이 외국의 원조를 받았습니다! 이 사안에 강하게 반대하고 모든 주재무관의 귀국을 요구해야만 합니다."
  infrastructure_building_slot:0 "광범위한 산업 통합"
  infrastructure_building_slot_flag:0 "기반시설을 통한 추가적인 건설 슬롯을 아직 받지 않았습니다."
  war_building_slot:0 "산업용 부지 대여"
@@ -526,7 +526,7 @@
  JAP_pressure_france:1 "인도차이나 요구"
  JAP_break_the_london_naval_treaty:0 "런던 해군 군축조약 탈퇴"
  JAP_break_the_london_naval_treaty_desc:0 "런던 해군 군축조약의 분개할 만한 제약은 우리 국가의 안보를 위협하는 것입니다. 우리의 정당한 몫에 도전하는 어떤 국가에도 대등히 설 수 있도록 해군을 증강할 자유를 얻어야만 합니다."
- JAP_tora_tora_tora:0 "도라\! 도라\! 도라\!"
+ JAP_tora_tora_tora:0 "도라! 도라! 도라!"
  JAP_tora_tora_tora_desc:0 "첫 번째 일격이 기다리고 있습니다. 그 후에 우리는 우리가 획득한 추진력을 이용해 신속하게 타격해서 적들이 무슨 일이 있었는지 알기도 전에 무력화시켜야 합니다."
  JAP_war_with_soviet_union:0 "소비에트 연방에 선전 포고"
  JAP_war_with_soviet_union_desc:0 "유럽의 우리 동맹국들이 소비에트 연방과 불가침조약을 체결했습니다. 어찌됐든 우리의 전쟁은 더 기다릴 수 없습니다. 동맹국들과 멀어지는 위험을 감수해서라도, 공산주의자와의 분쟁을 일방적으로 밀어붙여야만 합니다."
@@ -564,7 +564,7 @@
  war_propaganda_against_warmonger:1 "[From.GetName]에의 전시 선전"
  war_propaganda_against_warmonger_desc:0 "국가가 모든 남성, 여성 그리고 어린이를 부르고 있습니다. [From.GetName](와)과의 전쟁이 가까이 있기 때문입니다."
  war_propaganda_against_warmonger_neighbor:1 "[From.GetName]에의 전시 선전"
- war_propaganda_against_warmonger_neighbor_desc:0 "내일 [From.GetName](은)는 우리의 적이 됩니다. 우리는 오늘 나라를 지킬 당신이 필요합니다\!"
+ war_propaganda_against_warmonger_neighbor_desc:0 "내일 [From.GetName](은)는 우리의 적이 됩니다. 우리는 오늘 나라를 지킬 당신이 필요합니다!"
  JAP_develop_north_sakhalin_oil_deposits:1 "북사할린 유전 개발"
  JAP_develop_ulan_ude_aluminium_deposits:1 "울란우데 보크사이트 매장지 개발"
  JAP_develop_tonkin_aluminium_deposits:1 "통킹 보크사이트 매장지 개발"
@@ -811,7 +811,7 @@
  MAN_banditry_category:0 "도적"
  MAN_banditry_category_desc:0 "관동군은 국가 건설보다는 군사적 점령을 행하고 있으며 만주 거주민들을 돕는 데는 적은 관심을 보이고 있습니다. 이름 뿐인 만주국 정부가 일본의 명령을 시행할 자원도 아주 적습니다. 이러한 권력의 공백이, '자유의 투사'를 자처하며 살인과 강도를 일삼고 여기에 '국가 해방'이니 '프롤레타리아 국제주의' 따위의 어지러운 이상으로 이름붙인 온갖 도적떼를 만들고 말았습니다. 그러나 대부분은 악행에 덧씌울 어떤 유형의 사상도 갖지 않았을 것입니다."
  MAN_bandit_raids:0 "도적떼의 습격"
- MAN_bandit_raids_desc:0 "정처없이 떠도는 도적과 테러범들은 못 박히지 않은 모든 것을 훔치고, 가져갈 수 없으면 태워버립니다\! 부대를 더 증원해 막아야 합니다\!"
+ MAN_bandit_raids_desc:0 "정처없이 떠도는 도적과 테러범들은 못 박히지 않은 모든 것을 훔치고, 가져갈 수 없으면 태워버립니다! 부대를 더 증원해 막아야 합니다!"
  PRC_border_clashes:0 "국경 분쟁"
  PRC_border_clashes_desc:0 "중국 땅의 모든 군세는 조심스럽게 전투를 벌이고 있습니다. 전면적인 교전 없이 무방비한 땅을 점령할 기회를 엿보고 있습니다."
  MAN_pacify_bandits_mission_explanation:0 "해당 주에 사단을 주둔시키면 [?Root.MAN_maintain_control_timer|H0]일 동안 지역의 도적떼를 평정할 것입니다.\n"
