--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -27,7 +27,7 @@
  LOADING_TIP_26:0 "모든 것을 영원히 지켜내는 것에 성공한 사람은 아무도 없다. 공격, 공격하는 것만이 성공하는 길이다.\n- 조지 S. 패튼"
  LOADING_TIP_27:0 "전쟁은 무기로써 싸우지만 승리는 인간이 쟁취한다. 승리는 따르고 이끌 수 있는 자들의 정신에 달려있다.\n- 조지 S. 패튼"
  LOADING_TIP_28:0 "내가 처음 제트기를 봤을 때, 쏴서 격추시켰지.\n- 척 예거 , 미 공군"
- LOADING_TIP_29:0 "테오, 여기는 하인리히. 폭격기 둘을 격추시켰다. 이제 탄약은 없다. 이대로 들이받겠다. 안녕히, 발할라에서 만나자\!\n- 하인리히 엘러, 루프트바페"
+ LOADING_TIP_29:0 "테오, 여기는 하인리히. 폭격기 둘을 격추시켰다. 이제 탄약은 없다. 이대로 들이받겠다. 안녕히, 발할라에서 만나자!\n- 하인리히 엘러, 루프트바페"
  LOADING_TIP_30:0 "지도력이란 선택된 인격자와 최선을 다해 그를 돕는 이들이 만든다.\n- 체스터 W. 니미츠"
  LOADING_TIP_31:0 "제안된 작전이 성공할 수 있는 것인가? 물자 보급의 측면에서 실현 가능한 것인가? \n- 체스터 W. 니미츠"
  LOADING_TIP_32:0 "싸움을 대비하면서 언제나 계획이 쓸모없어지는 것을 봤지만, 계획은 필수적이다. \n- 드와이트 D. 아이젠하워"
@@ -42,16 +42,16 @@
  LOADING_TIP_42:0 "미국, 영국과 전쟁을 시작한 첫 6~12개월 간은 승리할 수 있을 것이다. 그 후에는, 성공을 장담할 수 없다.\n- 야마모토 이소로쿠"
  LOADING_TIP_43:0 "설령 지뢰밭을 마주쳐도, 우리의 보병들은 개의치 않고 공격할 것이다. \n- 게오르기 주코프"
  LOADING_TIP_44:0 "러시아의 거대함은 우리가 헤아릴 수가 없다... 사단 12개를 쳐부술 때마다 또 다른 사단 12개가 나타난다.\n- 프란츠 할더"
- LOADING_TIP_45:0 "독일 지휘관에게: 미친놈\!\n미군 지휘관이.\n- 앤서니 C. 맥컬리프 (독일의 항복 권고에 대한 답장에서)"
+ LOADING_TIP_45:0 "독일 지휘관에게: 미친놈!\n미군 지휘관이.\n- 앤서니 C. 맥컬리프 (독일의 항복 권고에 대한 답장에서)"
  LOADING_TIP_46:0 "오늘 우리에게 일어난 일이 내일 여러분에게 일어날 수도 있다. \n- 하일레 셀라시에 1세, 1936년"
- LOADING_TIP_47:0 "한 발짝도 물러나지 마라\!\n- 소비에트 명령 227호"
- LOADING_TIP_48:0 "도라\! 도라\! 도라\!\n- 후치다 미쓰오, 1941년 12월 7일"
+ LOADING_TIP_47:0 "한 발짝도 물러나지 마라!\n- 소비에트 명령 227호"
+ LOADING_TIP_48:0 "도라! 도라! 도라!\n- 후치다 미쓰오, 1941년 12월 7일"
  LOADING_TIP_49:0 "너의 이름은 무명이다. 너의 행동은 불멸이다.\n- 무명 용사의 묘 (모스크바)"
  LOADING_TIP_50:0 "어디에 있는가. 반복한다. 제34임무부대는 어디에 있는가? 전 세계가 궁금해 한다.\n- 체스터 니미츠, 레이테만 전투"
  LOADING_TIP_51:0 "모두가 최선을 다했지만, 전황이 호전되진 않았다.\n- 덴노 히로히토, 1945년"
  LOADING_TIP_52:0 "우리는 첫 번째 전쟁 이후 깨달았어야 했다. \n- 게르트 폰 룬트슈테트"
  LOADING_TIP_53:0 "러시아의 광대함이 우리를 집어삼킨다. \n- 게르트 폰 룬트슈테트"
- LOADING_TIP_56:0 "적 항모를 날려버렸다\! 항모 여기는 딕슨, 적 항모를 날려버렸다\!\n- 로버트 E. 딕슨, 산호해 해전에서"
+ LOADING_TIP_56:0 "적 항모를 날려버렸다! 항모 여기는 딕슨, 적 항모를 날려버렸다!\n- 로버트 E. 딕슨, 산호해 해전에서"
  LOADING_TIP_58:0 "카이저는 춤추는 얼간이다. 그를 총으로 쏴죽여야 함이 틀림없다.\n- 헤닝 폰 트레스코우"
  LOADING_TIP_59:0 "다른 사람 모두를 폭격하지만 자신들은 폭격당하지 않을 것이라는, 약간 유치한 망상으로 스파르타시스트는 전쟁을 시작했다.\n- 아서 '폭격기' 해리스"
  LOADING_TIP_60:0 "만약 리프크네히트가 지옥을 침공한다면, 하원 의회에서 악마를 옹호할 수도 있다.\n- 윈스턴 처칠, 1941년 6월 21일"
@@ -60,7 +60,7 @@
  LOADING_TIP_64:0 "프랑스인은 곧 공격할 것이라고 체코인을 속였다. 그럴 생각은 전혀 없음에도.\n- 에드먼드 아이언사이드"
  LOADING_TIP_66:0 "이 전쟁은 거짓같다.\n- 미 상원 의원 윌리엄 보라, 1939년"
  LOADING_TIP_68:0 "승리의 과실이 우리의 입안으로 너무나 빨리 들어오고 있소.\n- 덴노 히로히토"
- LOADING_TIP_69:0 "당신은 프랑스의 구두나 닦고 말 셈인가\!\n- 이탈로 발보"
+ LOADING_TIP_69:0 "당신은 프랑스의 구두나 닦고 말 셈인가!\n- 이탈로 발보"
  LOADING_TIP_70:0 "침몰시켜라, 불태워라, 붙잡아라, 파괴하라. 아무도 통과하게 하지 마라.\n- 앤드류 커닝햄, 튀니지 전투"
  LOADING_TIP_71:0 "내 생각에는 너무 멀리 있는 다리까지 가려고 한 것 같소.\n - 프레드릭 브라우닝 (마켓 가든 작전의 개시 전)"
  LOADING_TIP_72:0 "하느님, 프랑스군을 구해주셔서 감사합니다.\n-  윈스턴 처칠, 1933년"
@@ -71,7 +71,7 @@
  LOADING_TIP_77:0 "군인들에게 조국을 지키고 있다는 의식이 없다면, 요새, 대포, 대외원조 같은 것은 아무런 의미가 없다.\n- 카를 구스타프 에밀 만네르하임"
  LOADING_TIP_78:0 "진흙과 피를 헤쳐 저 너머 푸른 들로 가자.\n- 왕립 캐나다 기갑 군단의 표어"
  LOADING_TIP_79:0 "영국 함대에는 이탈리아인들이 전쟁 끝까지 버틸지 아니면 완전 쓰러질지 알고 싶어 하는 호기심 많은 장군들이 있다.\n- 윈스턴 처칠 (이탈리아의 참전 선언 때)"
- LOADING_TIP_80:0 "그리고 우리는 가진 게 열혈 단신만 있기에 깨진 맥주병 날을 가지고 들이받아 그들과 싸울 것입니다\!\n- 윈스턴 처칠 (시가지와 야지에서 싸울 것을 약속 한 직후)"
+ LOADING_TIP_80:0 "그리고 우리는 가진 게 열혈 단신만 있기에 깨진 맥주병 날을 가지고 들이받아 그들과 싸울 것입니다!\n- 윈스턴 처칠 (시가지와 야지에서 싸울 것을 약속 한 직후)"
  LOADING_TIP_81:0 "경험에 의하면 전차를 상대로 공격시 충분히 결연한 사람에게 근접전 무기가 있다면 항상 승리할 것입니다.\n- 독일 기갑군 대전차 대응 안내서 중"
  LOADING_TIP_82:0 "나에게 더글러스 DC-3 50대를 주면 일본이 버마 로드를 가질 수 있소.\n- 장제스"
  LOADING_TIP_83:0 "정치란 유혈 없는 전쟁이고, 전쟁이란 유혈 있는 정치이다.\n- 마오쩌둥"
